--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Skyhawk USERBOT",
-  "description": "ITS YOUR Skyhawk USERBOT MADE WITH IDK... ❤ ENJOY ",
+  "description": "ITS YOUR Skyhawk USERBOT MADE WITH LOVE... ❤ ENJOY ",
   "logo": "",
     "keywords": [
     "telegram",
@@ -9,9 +9,9 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/FURIOUS-XY/Skyhawk-USERBOT/",
-  "website": "https://github.com/FURIOUS-XY/Skyhawk-USERBOT/",
-  "success_url": "https://t.me/HARSH-78",
+  "repository": "https://github.com/don1900/SkyHawk",
+  "website": "https://github.com/don1900/SkyHawk",
+  "success_url": "https://t.me/always_don",
   "env": {
     "ENV": {
       "description": "Set this to ANYTHING will enable heroku.",
@@ -23,13 +23,13 @@
       "required": false
     },
     "ALIVE_NAME": {
-      "description": "Fill your Full name. By default it is SkyhawkBOT USER",
-      "value": "SkyhawkBOT User",
+      "description": "Fill your Full name. By default it is SkyHawk USER",
+      "value": "SkyHawk User",
       "required": false
     },
     "ALIVE_MSG": {
       "description": "Set Custom Alive Message When entering .alive Command.",
-      "value": "YOUR Skyhawk BOT IS ON !",
+      "value": "YOUR Skyhawk USERBOT IS ON !",
       "required": false
     },
     "ALIVE_PIC": {
@@ -39,7 +39,7 @@
     },
     "BIO_MSG": {
       "description": "Put Your Telegram Bio Here Required For Auto Bio.",
-      "value": "ITS Skyhawk BOT! USERBOT OF YOUR DAD",
+      "value": "ITS Skyhawk USERBOT! USERBOT OF YOUR DAD",
       "required": false
     },
     "PMPERMIT_PIC": {
@@ -49,7 +49,7 @@
     },
     "CUSTOM_PMPERMIT": {
       "description": "Enter Your custom pm permit msg.",
-      "value": "PLEASE DO NOT SPAM IN MY DM, OTHERWISE YOU WILL BLOCKED. I WILL REPLY YOU AFTER COME BACK ONLINE!",
+      "value": "DO NOT SPAM IN MY DM, OTHERWISE YOU WILL BLOCKED. I WILL REPLY YOU AFTER COME BACK ONLINE!",
       "required": false
     },
     "PM_PERMIT_GROUP_ID": {
@@ -107,7 +107,7 @@
        "value": "-1001174450494"
     }, 
     "STRING_SESSION": {
-      "description": "Get this value by running https://repl.it/FURIOUS-XY/Skyhawk-USERBOT#main.py ",
+      "description": "Get this value by running https://replit.com/@don1900/SkyHawk#main.py ",
       "value": ""
     },
     "HEROKU_API_KEY": {
