--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Skyhawk USERBOT",
   "description": "ITS YOUR Skyhawk USERBOT MADE WITH LOVE... ❤ ENJOY ",
-  "logo": "",
+  "logo": "https://telegra.ph/file/43c27b398289bd0d427c2.jpg",
     "keywords": [
     "telegram",
     "userbot",
